{{$NEXT}}

- Don't assume that '.' is in @INC in the Makefile.PL.


0.57     2017-02-19

- Fix code that called a Specio private method directly.


0.56     2017-02-01

- Fixed Win32 test failures. Reported by Christian Walde. GH #72.

- Added a global ignore feature. You can now provide ignore configuration at
  the top level of your tidyall config file and/or pass an --ignore flag on
  the command line. Any ignores specified this way will be ignore for all
  plugins. Based on GH #73 from Martin Guner.


0.55     2016-10-31

- Require Moo 2.000000 or greater.


0.54     2016-10-15

- Fixed error when passing in paths as a string to the Code::TidyAll
  constructor. These are now coerced to Path::Tiny objects. Reported by Martin
  Gruner. GH #66.


0.53     2016-10-10

[BUG FIXES]

- Fixed failing tests on OSX. Reported by Martin Gruner. GH #65.

- Files that were tidied could have their permissions mode when they were
  rewritten. Reported by Martin Gruner (GH #68) and fixed by Adam Herzog (GH
  #69).


0.52     2016-09-19

[BUG FIXES]

- The 0.50 release added an implicit configure phase prereq on Path::Tiny
  without declaring it. That bit of code has been reverted to use just core
  modules.

- Change tidyall shbang line to "#!perl". I had changed it to "#!/usr/bin/env
  perl" but MakeMaker does not rewrite this on install.


0.51     2016-09-18

[BUG FIXES]

- Restored some exports to Code::TidyAll::Util for backwards
  compatibility. Some other plugins are using these exports.


0.50     2016-09-18

[BACKWARDS INCOMPATIBILITIES]

- Converted (almost) all file handling to use Path::Tiny. This should help
  make the code and tests more cross-platform, and simplifies various bits of
  internal code. Note that plugins now receive paths as Path::Tiny objects,
  which could break code that checks if what it receives is a plain scalar.

[ENHANCEMENTS]

- Added support for tidying in multiple parallel jobs at once. You can pass a