@@ -7,6 +7,8 @@ copyright_holder = Jonathan Swartz
 
 [@DROLSKY]
 dist = Code-TidyAll
+exclude_files = node_modules/.*
+exclude_files = php5/.*
 prereqs_skip = JSON::MaybeXS
 prereqs_skip = Mason::Tidy
 prereqs_skip = Mason::Tidy::App
@@ -21,7 +23,6 @@ use_github_issues = 1
 -remove = DROLSKY::TidyAll
 ; This ends up matching legitimate markdown
 -remove = Git::CheckFor::MergeConflicts
--remove = MakeMaker
 -remove = Test::CleanNamespaces
 ; Many plugins won't compile without optional prereqs
 -remove = Test::Compile
@@ -34,9 +35,6 @@ use_github_issues = 1
 -remove = Test::Portability
 -remove = Test::Synopsis
 -remove = Test::TidyAll
-
-;authordep Dist::Zilla::Plugin::MakeMaker::Awesome
-[=inc::MyMakeMaker]
 
 ;authordep Pod::Tidy
 
