@@ -14,10 +14,11 @@ sub require_executable {
     my $self = shift;
     my $exe  = shift;
 
-    which($exe)
-        or $self->FAIL_ALL("These tests require that $exe be in your \$PATH");
+    return 1 if which($exe);
 
-    return;
+    $self->builder->skip("These tests require that $exe be in your \$PATH");
+
+    return 0;
 }
 
 sub create_dir {
